; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_constant_time_test.c_test_sizeofs.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_constant_time_test.c_test_sizeofs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_values = common dso_local global i32 0, align 4
@test_values_s = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_sizeofs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_sizeofs() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @test_values, align 4
  %3 = call i32 @OSSL_NELEM(i32 %2)
  %4 = load i32, i32* @test_values_s, align 4
  %5 = call i32 @OSSL_NELEM(i32 %4)
  %6 = call i32 @TEST_uint_eq(i32 %3, i32 %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %10

9:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %10

10:                                               ; preds = %9, %8
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @TEST_uint_eq(i32, i32) #1

declare dso_local i32 @OSSL_NELEM(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
